<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginOTPActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="20">

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/light_gray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_1"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/my_primary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_2"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/light_gray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_3"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_password_24"
            app:tint="@color/my_primary"
            android:layout_weight="20"
            android:contentDescription="@string/ct_iconPhone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/otp_verification"
            android:textSize="18sp"
            android:textStyle="bold"
            android:letterSpacing="0.08"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="5"

            >

            <EditText
                android:id="@+id/login_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:hint="@string/txt_OTP"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:inputType="phone"
                android:autofillHints="phone"
                android:maxLength="6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="20">

            <Button
                android:id="@+id/btn_login_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_NEXT" />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/my_primary" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtview_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/txt_resendOTP" />
        "
    </LinearLayout>
</layout>