<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginNumberPhoneActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="20">

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/my_primary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_1"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/light_gray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_2"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/light_gray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_3"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_phone_iphone_24"
            app:tint="@color/my_primary"
            android:layout_weight="20"
            android:contentDescription="@string/ct_iconPhone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_inputNumber"
            android:textSize="18sp"
            android:textStyle="bold"
            android:letterSpacing="0.08"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="5"

            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/login_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false"
                app:ccp_defaultPhoneCode="52"
                app:ccp_defaultLanguage="ENGLISH" />

            <EditText
                android:id="@+id/login_mobil_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:hint="@string/txt_hint_mobile"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:inputType="phone"
                android:autofillHints="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="20">

            <Button
                android:id="@+id/btn_sent_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_btnPhoneNumber" />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/my_primary" />

        </LinearLayout>
    </LinearLayout>
</layout>