<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileFragment"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/profile_pick"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary"
            android:src="@drawable/baseline_person_24"
            android:scaleType="centerCrop"
            android:layout_marginBottom="40dp" />

        <EditText
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:inputType="text"
            android:hint="@string/txt_Username"
            android:padding="10dp"
            android:enabled="false"
            android:layout_margin="10dp"
            />
        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:inputType="phone"
            android:hint="@string/txt_phone"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:enabled="false"
            />

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text= "@string/txt_update_profile" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:indeterminateTint="@color/my_primary"
            />

        <TextView
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_logout"
            android:layout_marginTop="12dp"
            />
    </LinearLayout>
</layout>